--- a/index.css
+++ b/index.css
@@ -159,3 +159,94 @@ body{
     background: var(--main-color);
     color: var(--white-color);
 }
+
+.book-page.page-right{
+    position: absolute;
+    right: 0;
+    transform-style: preserve-3d; /*check*/
+    transform-origin: left;
+}
+
+.book-page.page-right.turn{
+    transform: rotateY(-180deg);
+}
+
+.book-page .page-front,
+.book-page .page-back{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--pages-color);
+    padding: 1.5rem 2rem;
+}
+
+.book-page .page-front{
+    transform: rotateY(0deg) translateZ(1px);/*check*/
+}
+
+.book-page .page-back{
+    transform: rotateY(180deg) translateZ(1px);/*check*/
+}
+
+.Title{
+    text-align: center;
+    margin-bottom: .8rem;
+}
+
+.workedu-box{
+    /* background: red; */
+    border-left: var(--border);
+}
+
+.workedu-box .workedu-content{
+    position: relative;
+    /* background: seagreen; */
+    padding-left: 1.6rem;
+    margin-bottom: .5rem;
+}
+
+.workedu-box .workedu-content::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -0.65rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    background: var(--main-color);
+    border-radius: 50%;
+}
+
+.workedu-content .year{
+    color: var(--main-color);
+}
+
+.workedu-content .year i {
+    margin-right: .4rem;
+}
+
+.number-page{
+    position: absolute;
+    /* bottom: 1.2rem; */
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nextprev-btn{
+    position: absolute;
+    bottom: .9rem;
+    right: 1.5rem;
+    width: 2rem;
+    height: 2rem;
+    /* background: seagreen; */
+    font-size: 1.5rem;
+    color: var(--second-text-color);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nextprev-btn:hover{
+    color: var(--main-color);
+}
