--- a/index.css
+++ b/index.css
@@ -249,4 +249,86 @@ body{
 
 .nextprev-btn:hover{
     color: var(--main-color);
+    cursor: pointer;
+}
+
+.nextprev-btn.back{
+    left: 1rem;
+}
+
+.services-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.services-box .services-content{
+    flex: 1 1 10rem;
+    border: var(--border);
+    border-radius: .5rem;
+    padding: .8rem .5rem 1.1rem;
+    text-align: center;
+    transition: .3s ease;
+}
+
+.services-box .services-content:hover{
+    box-shadow: var(--box-shadow);
+}
+
+.services-content i{
+    font-size: 2.5rem;
+    color: var(--main-color);
+}
+
+.services-content h3{
+    font-size: 1.1rem;
+}
+
+.services-content p{
+    margin: .2rem 0 .8rem;
+}
+
+.services-content .btn{
+    width: 8rem;
+    height: 2.5rem;
+}
+
+.skills-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.skills-box .skills-content{
+    /* background: red; */
+    flex: 1 1 20rem;
+}
+
+.skills-box h3{
+    font-size: 1.3rem;
+    line-height: 1;
+    margin-bottom: .6rem;
+}
+
+.skills-content .content{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .8rem;
+}
+
+.skills-content .content span{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    height: 5rem;
+    border: var(--border);
+    border-radius: .3rem;
+    font-weight: 600;
+}
+
+.skills-content .content span i {
+    font-size: 3rem;
+    color: var(--main-color);
 }
