--- a/index.css
+++ b/index.css
@@ -326,9 +326,74 @@ body{
     border: var(--border);
     border-radius: .3rem;
     font-weight: 600;
+    transition: .3s ease;
 }
 
-.skills-content .content span i {
+.skills-content .content span:hover{
+    box-shadow: var(--box-shadow);
+}
+.skills-content .content span .icons {
     font-size: 3rem;
     color: var(--main-color);
+}
+
+.portfolio-box .img-box{
+    display: flex;
+    width: 100%;
+    height: 15rem;
+    /* background: red; */
+    border: var(--border);
+    border-radius: .5rem;
+    overflow: hidden;
+}
+
+.portfolio-box .img-box img{
+    width: 100%;
+    object-fit: cover;
+    transition: .5s ease;
+}
+
+.portfolio-box .img-box:hover img{
+    transform: scale(1.1);
+}
+
+.portfolio-box .info-box{
+    /* background: red; */
+    margin: 1rem 0 1.5rem;
+}
+
+.portfolio-box .info-box .info-title{
+    /* background: seagreen; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.portfolio-box .info-box .info-title h3{
+    font-size: 1.3rem;
+}
+
+.portfolio-box .info-box .info-title a{
+    display: flex;
+    align-items: center;
+    color: var(--main-color);
+}
+
+.portfolio-box .info-box .info-title a i{
+    margin-left: .3rem;
+}
+
+.portfolio-box .info-box p:nth-of-type(1){
+    font-weight: 600;
+}
+
+.portfolio-box .btn-box{
+    /* background: red; */
+    display: flex;
+    justify-content: center;
+}
+
+.portfolio-box .btn-box .btn{
+    margin: 0 1.15rem;
 }
