--- a/index.css
+++ b/index.css
@@ -50,6 +50,14 @@ body{
     transform-origin: right;
 }
 
+.cover.cover-left{
+    z-index: -1;
+}
+
+.cover.cover-right{
+    z-index: 100;
+}
+
 .cover.cover-right.turn{
     transform: rotateY(180deg);
 }
