--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body{
     align-items: center;
     min-height: 100vh;
     background: var(--box-color);
+    overflow: hidden;
 }
 
 .wrapper{
@@ -35,6 +36,19 @@ body{
     height: 45rem;
     /* background: red; */
     padding: 2rem;
+    perspective: 250rem;
+    animation: show-animate 2s forwards;
+}
+
+@keyframes show-animate{
+    0%,30%{
+        opacity: 0;
+        transform: rotate(-20deg);
+    }
+    100%{
+        opacity: 1;
+        transform: rotate(0deg);
+    }
 }
 
 .cover{
@@ -56,6 +70,7 @@ body{
 
 .cover.cover-right{
     z-index: 100;
+    transition: transform 1s cubic-bezier(.645, .045, .355, 1);
 }
 
 .cover.cover-right.turn{
@@ -78,6 +93,10 @@ body{
     box-shadow: 0 0 .6rem rgba(0, 0, 0, .1);
     display: flex;
     padding: 2rem;
+}
+
+.book-page.page-left{
+    box-shadow: -.6rem .6rem .6rem rgba(0, 0, 0, .1);
 }
 
 .profile-page{
